# Cosas_De_Hardware

./: README.md
pico/: compiler.sh  monitor.sh  to_rpi.sh
pico/my_project/: CMakeLists.txt  my_project.c
pico/uart-reader/: CMakeLists.txt  main.c
